networking/sctp-manifests/04-connectivity-tests/sctp-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sctp-server
  namespace: sctp-test
  labels:
    app: sctp-server
spec:
  containers:
    - name: sctp-server
      image: registry.access.redhat.com/ubi9/ubi:latest
      command:
        - /bin/sh
        - -c
        - |
          [...]
      ports:
        - containerPort: 38412
          protocol: SCTP
          name: sctp
