networking/sctp-manifests/04-connectivity-tests/sctp-s1ap-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: s1ap-mme-sim
  namespace: sctp-test
  labels:
    app: mme-sim
spec:
  containers:
    - name: mme
      image: registry.access.redhat.com/ubi9/ubi:latest
      command:
        - /bin/sh
        - -c
        - |
          [...]
      ports:
        - containerPort: 36412
          protocol: SCTP
          name: s1ap
---
apiVersion: v1
kind: Service
metadata:
  name: mme-sim
  namespace: sctp-test
spec:
  selector:
    app: mme-sim
  ports:
    - name: s1ap
      protocol: SCTP
      port: 36412
      targetPort: 36412
  type: ClusterIP
