networking/sctp-manifests/04-connectivity-tests/sctp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sctp-server
  namespace: sctp-test
spec:
  selector:
    app: sctp-server
  ports:
    - name: sctp
      protocol: SCTP
      port: 38412
      targetPort: 38412
  type: ClusterIP
