networking/sctp-manifests/04-connectivity-tests/sctp-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sctp
  namespace: sctp-test
spec:
  podSelector:
    matchLabels:
      app: sctp-server
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: sctp-client
      ports:
        - protocol: SCTP
          port: 38412
  policyTypes:
    - Ingress
